# elmar

./: .env.example  .gitignore  README.md  application.py  db_operations.py  pyproject.toml  recsys.py  requirements.txt
.ebextensions/: 01_packages.config
static/css/: styles.css
static/js/: index.js
templates/: _debug.html  base.html  items_list.html  login.html  main.html  preferences_output.html  recommendation_output.html  request_form.html  toasts.html
