# file: pyproject.toml

[build-system]
requires = [
  "blinker>=1.7.0",
  "build>=1.0.3",
  "click>=8.1.7",
  "Flask>=3.0.0",
  "importlib-metadata>=7.0.0",
  "itsdangerous>=2.1.2",
  "Jinja2>=3.1.2",
  "MarkupSafe>=2.1.3",
  "packaging>=23.2",
  "psycopg2>=2.9.9",
  "pyproject_hooks>=1.0.0",
  "python-dotenv>=1.0.0",
  "tomli>=2.0.1",
  "Werkzeug>=3.0.1",
  "zipp>=3.17.0",
  "setuptools>=69.0.0",
  "Markdown >= 3.5.2
]

build-backend = "setuptools.build_meta"

[project]
name = "application"
version = "0.1.0"
dependencies = [
  "flask",
  "psycopg2",
  "markdown"
]

